Updt:Invoive , Shipment and Design

--- a/src/administration/admins/templates/admins/dashboard.html
+++ b/src/administration/admins/templates/admins/dashboard.html
@@ -134,7 +134,7 @@
 
     </div>
     <div class="row mt-4">
-        <div class="col-md-8 mb-4">
+        <div class="col-sm-12 col-md-12 col-lg-7 mb-4">
             <div class="card">
                 <div class="card-body">
                     <div class="text">
@@ -198,7 +198,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mb-4">
+
+        <div class=" col-sm-12  col-md-12 col-lg-5 mb-4">
             <div class="card">
                 <div class="card-body">
                     <div class="text">
@@ -212,6 +213,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.49.1/apexcharts.min.js"
