--- a/src/website/templates/website/product_list.html
+++ b/src/website/templates/website/product_list.html
@@ -227,7 +227,7 @@
                                                 <div class="row g-4" id="shop_list">
                                                 {% if object_list %}
                                                     {% for object in object_list %}
-                                                        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 card-length">
+                                                        <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4 card-length">
                                                             <div class="product_layout_1 overflow-hidden position-relative">
 
                                                                 <div class="product_layout_content bg-white position-relative">
