--- a/src/administration/admins/templates/admins/product_detail.html
+++ b/src/administration/admins/templates/admins/product_detail.html
@@ -18,7 +18,7 @@
         <i class="fa fa-plus"></i>&nbsp;Edit
     </a>
     <a class="btn btn-outline-danger" href="{% url 'admins:product-delete' object.pk %}">
-        <i class="fa fa-plus"></i>&nbsp;Delete
+        <i class="fa fa-trash"></i>&nbsp;Delete
     </a>
     <button class="btn btn-outline-success float-end pr-4-3" data-bs-target="#modal-image-add"
             data-bs-toggle="modal" type="button">
@@ -26,7 +26,7 @@
     </button>
     <button class="btn btn-outline-success float-end pr-4-3" data-bs-target="#modal-weight-add"
             data-bs-toggle="modal" type="button">
-        <i class="fa fa-image"></i>&nbsp;Add Weight
+        <i class="fa fa-plus"></i>&nbsp;Add Weight
     </button>
 {% endblock %}
 
@@ -194,34 +194,81 @@
                                                     <th scope="row">Total Reviews</th>
                                                     <td>{{ object.total_reviews }}</td>
                                                 </tr>
-                                                                         <tr>
-                                                    <th scope="row">Weight</th>
-                                                    <td>{% if object.productweight_set.all %}{% for object in object.productweight_set.all %}
 
-                                                        <a href="{% url 'admins:product-weight-delete' object.product.id object.id %}" class="btn btn-transparent">
-                                                            {{ object.weight }}&nbsp;&nbsp;
-                                                            <br>{{ object.price }} &nbsp;&nbsp;
-                                                            <span>❌</span>
-                                                        </a>{% endfor %}
-                                                    {% else %}
-                                                        <b class="text-danger">Weights Are not Added yet</b>
-                                                    {% endif %}
-                                                    </td>
-                                                </tr>
                                                 </tbody>
                                             </table>
+
                                         </div>
+
                                     </div>
                                 </div>
+
                             </div>
 
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-12 mt-4">
+                <div class="card p-4">
+                    {% if object.productweight_set.all %}
+                        <h3 class="mt-3">Product Size</h3>
+
+                        <div class="row">
+                            <div class="table-responsive">
+
+                                <table class="table table-responsive">
+                                    <tbody>
+                                    <thead>
+                                    <tr>
+                                        <th scope="col">-</th>
+                                        <th scope="col">Price</th>
+                                        <th scope="col">Length</th>
+                                        <th scope="col">Breadth</th>
+                                        <th scope="col">Height</th>
+                                        <th scope="col">weight</th>
+                                        <th scope="col">Add Product Size</th>
+                                        <th scope="col">Delete Weight</th>
+                                    </tr>
+                                    </thead>
+                                    {% for object in object.productweight_set.all %}
+
+                                        <tr>
+                                            <th scope="row">{{ object.weight }}</th>
+                                            <th>{{ object.price }}</th>
+                                            <th>{% if object.get_product_size.length %}
+                                                {{ object.get_product_size.length }}{% else %}-{% endif %}</th>
+                                            <th>{% if object.get_product_size.breadth %}
+                                                {{ object.get_product_size.breadth }}{% else %}-{% endif %}</th>
+                                            <th>{% if object.get_product_size.height %}
+                                                {{ object.get_product_size.height }}{% else %}-{% endif %}</th>
+                                            <th>{% if object.get_product_size.weight %}
+                                                {{ object.get_product_size.weight }}{% else %}-{% endif %}</th>
+
+                                            <td>
+                                                <a href="{% url 'admins:product-size-add' object.product.id object.id %}"
+                                                ><i class="fa fa-plus"></i>
+                                                    <span>Add Product Size</span></a></td>
+                                            <td>
+                                                <a href="{% url 'admins:product-weight-delete' object.product.id object.id %}"
+                                                >
+                                                    <span><i class="fa fa-trash"></i> Delete</span></a>
+                                            </td>
+                                        </tr>
+
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    {% else %}
+                        <b class="text-danger">Weights Are not Added yet</b>
+                    {% endif %}
+                </div>
+            </div>
         </div>
     </div>
-    </div>
+
 
 
 
